// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignInModal renders a hidden modal if isOpen is false 1`] = `
Array [
  <div
    style={
      Object {
        "display": "none",
      }
    }
  >
    This site is protected by hCaptcha and its
    <a
      href="https://www.hcaptcha.com/privacy"
    >
      Privacy Policy
    </a>
     and
    <a
      href="https://www.hcaptcha.com/terms"
    >
      Terms of Service
    </a>
     apply.
    <div />
  </div>,
  <div
    role="dialog"
    style={
      Object {
        "display": "none",
        "position": "relative",
        "zIndex": "10",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "rgb(107 114 128 / .75)",
          "bottom": "0px",
          "left": "0px",
          "position": "fixed",
          "right": "0px",
          "top": "0px",
        }
      }
    />
    <div
      style={
        Object {
          "bottom": "0px",
          "left": "0px",
          "overflowY": "auto",
          "position": "fixed",
          "right": "0px",
          "top": "0px",
          "zIndex": "99",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
            "minHeight": "100%",
            "padding": "0",
            "textAlign": "center",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": "0.5rem",
              "boxShadow": "0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04)",
              "marginBottom": "2rem",
              "marginTop": "2rem",
              "maxWidth": "40rem",
              "overflow": "hidden",
              "position": "relative",
              "textAlign": "left",
              "transitionProperty": "all",
              "width": "100%",
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "borderBottom": "1px solid rgb(241 245 249)",
                  "display": "flex",
                  "justifyContent": "space-between",
                  "padding": "12px",
                }
              }
            >
              <h3
                style={
                  Object {
                    "fontSize": "1rem",
                    "fontWeight": "500",
                    "margin": "0",
                  }
                }
              >
                Sign In
              </h3>
              <div
                style={
                  Object {
                    "backgroundColor": "#F9FAFB",
                    "borderRadius": "100%",
                    "color": "#A0AEBA",
                    "cursor": "pointer",
                    "height": "24px",
                    "textAlign": "center",
                    "width": "24px",
                  }
                }
              >
                ✕
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderBottom": "1px solid rgb(241 245 249)",
                    "borderRight": "1px solid rgb(241 245 249)",
                    "display": "flex",
                    "flexDirection": "column",
                    "gap": "6px",
                    "padding": "24px 12px",
                    "width": "300px",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F3E8FE",
                      "borderRadius": "0.5rem",
                      "cursor": "pointer",
                      "fontWeight": "500",
                      "padding": "12px",
                    }
                  }
                >
                  <button
                    style={
                      Object {
                        "alignItems": "center",
                        "background": "none",
                        "border": "none",
                        "display": "flex",
                        "gap": "0.5rem",
                        "justifyContent": "start",
                        "textDecoration": "none",
                      }
                    }
                  >
                    <svg
                      height={21}
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      width={21}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M512 16C238.064 16 16 238.064 16 512s222.064 496 496 496 496-222.064 496-496S785.936 16 512 16zM307.488 346.672l409.008 0c5.184 0 10.064 1.232 14.464 3.296l-196.688 138.064c-17.104 17.12-27.696 17.12-44.8 0l-196.608-137.984C297.328 347.936 302.24 346.672 307.488 346.672zM750.816 652.192c0 18.96-15.36 34.336-34.304 34.336L307.488 686.528c-18.944 0-34.304-15.376-34.304-34.336L273.184 391.296c0-1.728 0.256-3.376 0.512-5.024l201.92 143.312c20.096 20.112 52.688 20.112 72.784 0l201.92-143.312c0.24 1.648 0.512 3.296 0.512 5.024L750.832 652.192z"
                      />
                    </svg>
                    Email or Social Login
                  </button>
                </div>
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F9FAFB",
                      "borderRadius": "0.5rem",
                      "cursor": "pointer",
                      "fontWeight": "500",
                      "padding": "12px",
                    }
                  }
                >
                  <button
                    style={
                      Object {
                        "alignItems": "center",
                        "background": "none",
                        "border": "none",
                        "display": "flex",
                        "gap": "0.5rem",
                        "justifyContent": "start",
                        "textDecoration": "none",
                      }
                    }
                  >
                    <svg
                      fill="none"
                      height={23.51063829787234}
                      viewBox="0 0 47 65"
                      width={17}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.00471 1H40.0029C42.7644 1 45.0029 3.23858 45.0029 6V44.8425C45.0029 47.604 42.7643 49.8425 40.0029 49.8425H6.0047C3.24328 49.8425 1.0047 47.604 1.0047 44.8425V6C1.0047 3.23858 3.24329 1 6.00471 1Z"
                        stroke="#1e293b"
                        strokeWidth="2"
                      />
                      <path
                        d="M6.68764 3.64648L30.6631 14.8026C32.0736 15.4589 32.9756 16.8735 32.9756 18.4292V58.6799C32.9756 61.5743 29.9966 63.5105 27.3515 62.3353L3.37601 51.683C1.93126 51.0411 1.00013 49.6085 1.00013 48.0276V7.27309C1.00013 4.34854 4.03609 2.41268 6.68764 3.64648Z"
                        fill="#1e293b"
                      />
                    </svg>
                    Ethos Wallet
                  </button>
                </div>
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F9FAFB",
                      "borderRadius": "0.5rem",
                      "cursor": "pointer",
                      "fontWeight": "500",
                      "padding": "12px",
                    }
                  }
                >
                  <button
                    style={
                      Object {
                        "alignItems": "center",
                        "background": "none",
                        "border": "none",
                        "display": "flex",
                        "gap": "0.5rem",
                        "justifyContent": "start",
                        "textDecoration": "none",
                      }
                    }
                  >
                    <svg
                      fill="none"
                      height={23.51063829787234}
                      viewBox="0 0 47 65"
                      width={17}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.00471 1H40.0029C42.7644 1 45.0029 3.23858 45.0029 6V44.8425C45.0029 47.604 42.7643 49.8425 40.0029 49.8425H6.0047C3.24328 49.8425 1.0047 47.604 1.0047 44.8425V6C1.0047 3.23858 3.24329 1 6.00471 1Z"
                        stroke="#1e293b"
                        strokeWidth="2"
                      />
                      <path
                        d="M6.68764 3.64648L30.6631 14.8026C32.0736 15.4589 32.9756 16.8735 32.9756 18.4292V58.6799C32.9756 61.5743 29.9966 63.5105 27.3515 62.3353L3.37601 51.683C1.93126 51.0411 1.00013 49.6085 1.00013 48.0276V7.27309C1.00013 4.34854 4.03609 2.41268 6.68764 3.64648Z"
                        fill="#1e293b"
                      />
                    </svg>
                    Ethos Wallet Mobile
                  </button>
                </div>
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F9FAFB",
                      "borderRadius": "0.5rem",
                      "cursor": "pointer",
                      "fontWeight": "500",
                      "padding": "12px",
                    }
                  }
                >
                  <button
                    style={
                      Object {
                        "alignItems": "center",
                        "background": "none",
                        "border": "none",
                        "display": "flex",
                        "gap": "0.5rem",
                        "justifyContent": "start",
                        "textDecoration": "none",
                      }
                    }
                  >
                    <svg
                      height={21.42857142857143}
                      id="SuiSvg"
                      viewBox="-1 0 28 40"
                      width={15}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M1.8611,33.0541a13.6477,13.6477,0,0,0,23.7778,0,13.89,13.89,0,0,0,0-13.8909L15.1824.8368a1.6444,1.6444,0,0,0-2.8648,0L1.8611,19.1632A13.89,13.89,0,0,0,1.8611,33.0541ZM10.8044,9.5555,13.0338,5.648a.8222.8222,0,0,1,1.4324,0L23.043,20.68a10.8426,10.8426,0,0,1,.8873,8.8828,9.4254,9.4254,0,0,0-.4388-1.4586c-1.1847-3.0254-3.8634-5.36-7.9633-6.9393-2.8187-1.0819-4.618-2.6731-5.3491-4.73C9.2375,13.7848,10.221,10.8942,10.8044,9.5555ZM7.0028,16.2184,4.457,20.68a10.8569,10.8569,0,0,0,0,10.8582,10.6776,10.6776,0,0,0,16.1566,2.935,7.5061,7.5061,0,0,0,.0667-5.2913c-.87-2.1858-2.9646-3.9308-6.2252-5.1876-3.6857-1.4147-6.08-3.6233-7.1157-6.5625A9.297,9.297,0,0,1,7.0028,16.2184Z"
                        style={
                          Object {
                            "fill": "#6EBCEE",
                            "fillRule": "evenodd",
                          }
                        }
                      />
                    </svg>
                    Sui Test Wallet
                  </button>
                </div>
              </div>
              <div
                style={
                  Object {
                    "display": "flex",
                    "flexDirection": "column",
                    "gap": "12px",
                    "padding": "24px",
                  }
                }
              >
                <h3
                  style={
                    Object {
                      "fontWeight": "500",
                      "margin": "0",
                    }
                  }
                >
                  Or sign up or log in with a link
                </h3>
                <form
                  onSubmit={[Function]}
                >
                  <input
                    onChange={[Function]}
                    placeholder="Email address"
                    style={
                      Object {
                        "border": "1px solid rgb(203 213 225)",
                        "borderRadius": "0.5rem",
                        "padding": "12px",
                        "width": "90%",
                      }
                    }
                    type="email"
                    value=""
                  />
                  <button
                    style={
                      Object {
                        "backgroundColor": "#761AC7",
                        "border": "1px solid rgb(203 213 225)",
                        "borderRadius": "0.5rem",
                        "color": "#FFFFFF",
                        "marginTop": "1rem",
                        "minWidth": "6rem",
                        "padding": "6px",
                        "textDecoration": "none",
                      }
                    }
                    type="submit"
                  >
                    Send
                  </button>
                </form>
                <div
                  style={
                    Object {
                      "fontSize": "small",
                      "paddingLeft": "3px",
                      "paddingTop": "6px",
                    }
                  }
                >
                  Advanced: 
                  <a
                    href="test/self-custodial"
                    rel="noopener noreferrer"
                    style={
                      Object {
                        "color": "#751ac7",
                        "fontWeight": 400,
                        "textDecoration": "underline",
                      }
                    }
                    target="_blank"
                  >
                    Create A Self-Custodial Wallet
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`SignInModal renders a visible modal if isOpen is true 1`] = `
<div
  role="dialog"
  style={
    Object {
      "display": "block",
      "position": "relative",
      "zIndex": "10",
    }
  }
>
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "rgb(107 114 128 / .75)",
        "bottom": "0px",
        "left": "0px",
        "position": "fixed",
        "right": "0px",
        "top": "0px",
      }
    }
  />
  <div
    style={
      Object {
        "bottom": "0px",
        "left": "0px",
        "overflowY": "auto",
        "position": "fixed",
        "right": "0px",
        "top": "0px",
        "zIndex": "99",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "minHeight": "100%",
          "padding": "0",
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": "0.5rem",
            "boxShadow": "0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04)",
            "marginBottom": "2rem",
            "marginTop": "2rem",
            "maxWidth": "40rem",
            "overflow": "hidden",
            "position": "relative",
            "textAlign": "left",
            "transitionProperty": "all",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            style={
              Object {
                "borderBottom": "1px solid rgb(241 245 249)",
                "display": "flex",
                "justifyContent": "space-between",
                "padding": "12px",
              }
            }
          >
            <h3
              style={
                Object {
                  "fontSize": "1rem",
                  "fontWeight": "500",
                  "margin": "0",
                }
              }
            >
              Sign In
            </h3>
            <div
              style={
                Object {
                  "backgroundColor": "#F9FAFB",
                  "borderRadius": "100%",
                  "color": "#A0AEBA",
                  "cursor": "pointer",
                  "height": "24px",
                  "textAlign": "center",
                  "width": "24px",
                }
              }
            >
              ✕
            </div>
          </div>
          <div
            style={
              Object {
                "display": "flex",
                "justifyContent": "space-between",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid rgb(241 245 249)",
                  "borderRight": "1px solid rgb(241 245 249)",
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": "6px",
                  "padding": "24px 12px",
                  "width": "300px",
                }
              }
            >
              <div
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "#F3E8FE",
                    "borderRadius": "0.5rem",
                    "cursor": "pointer",
                    "fontWeight": "500",
                    "padding": "12px",
                  }
                }
              >
                <button
                  style={
                    Object {
                      "alignItems": "center",
                      "background": "none",
                      "border": "none",
                      "display": "flex",
                      "gap": "0.5rem",
                      "justifyContent": "start",
                      "textDecoration": "none",
                    }
                  }
                >
                  <svg
                    height={21}
                    version="1.1"
                    viewBox="0 0 1024 1024"
                    width={21}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M512 16C238.064 16 16 238.064 16 512s222.064 496 496 496 496-222.064 496-496S785.936 16 512 16zM307.488 346.672l409.008 0c5.184 0 10.064 1.232 14.464 3.296l-196.688 138.064c-17.104 17.12-27.696 17.12-44.8 0l-196.608-137.984C297.328 347.936 302.24 346.672 307.488 346.672zM750.816 652.192c0 18.96-15.36 34.336-34.304 34.336L307.488 686.528c-18.944 0-34.304-15.376-34.304-34.336L273.184 391.296c0-1.728 0.256-3.376 0.512-5.024l201.92 143.312c20.096 20.112 52.688 20.112 72.784 0l201.92-143.312c0.24 1.648 0.512 3.296 0.512 5.024L750.832 652.192z"
                    />
                  </svg>
                  Email or Social Login
                </button>
              </div>
              <div
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "#F9FAFB",
                    "borderRadius": "0.5rem",
                    "cursor": "pointer",
                    "fontWeight": "500",
                    "padding": "12px",
                  }
                }
              >
                <button
                  style={
                    Object {
                      "alignItems": "center",
                      "background": "none",
                      "border": "none",
                      "display": "flex",
                      "gap": "0.5rem",
                      "justifyContent": "start",
                      "textDecoration": "none",
                    }
                  }
                >
                  <svg
                    fill="none"
                    height={23.51063829787234}
                    viewBox="0 0 47 65"
                    width={17}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.00471 1H40.0029C42.7644 1 45.0029 3.23858 45.0029 6V44.8425C45.0029 47.604 42.7643 49.8425 40.0029 49.8425H6.0047C3.24328 49.8425 1.0047 47.604 1.0047 44.8425V6C1.0047 3.23858 3.24329 1 6.00471 1Z"
                      stroke="#1e293b"
                      strokeWidth="2"
                    />
                    <path
                      d="M6.68764 3.64648L30.6631 14.8026C32.0736 15.4589 32.9756 16.8735 32.9756 18.4292V58.6799C32.9756 61.5743 29.9966 63.5105 27.3515 62.3353L3.37601 51.683C1.93126 51.0411 1.00013 49.6085 1.00013 48.0276V7.27309C1.00013 4.34854 4.03609 2.41268 6.68764 3.64648Z"
                      fill="#1e293b"
                    />
                  </svg>
                  Ethos Wallet
                </button>
              </div>
              <div
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "#F9FAFB",
                    "borderRadius": "0.5rem",
                    "cursor": "pointer",
                    "fontWeight": "500",
                    "padding": "12px",
                  }
                }
              >
                <button
                  style={
                    Object {
                      "alignItems": "center",
                      "background": "none",
                      "border": "none",
                      "display": "flex",
                      "gap": "0.5rem",
                      "justifyContent": "start",
                      "textDecoration": "none",
                    }
                  }
                >
                  <svg
                    fill="none"
                    height={23.51063829787234}
                    viewBox="0 0 47 65"
                    width={17}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.00471 1H40.0029C42.7644 1 45.0029 3.23858 45.0029 6V44.8425C45.0029 47.604 42.7643 49.8425 40.0029 49.8425H6.0047C3.24328 49.8425 1.0047 47.604 1.0047 44.8425V6C1.0047 3.23858 3.24329 1 6.00471 1Z"
                      stroke="#1e293b"
                      strokeWidth="2"
                    />
                    <path
                      d="M6.68764 3.64648L30.6631 14.8026C32.0736 15.4589 32.9756 16.8735 32.9756 18.4292V58.6799C32.9756 61.5743 29.9966 63.5105 27.3515 62.3353L3.37601 51.683C1.93126 51.0411 1.00013 49.6085 1.00013 48.0276V7.27309C1.00013 4.34854 4.03609 2.41268 6.68764 3.64648Z"
                      fill="#1e293b"
                    />
                  </svg>
                  Ethos Wallet Mobile
                </button>
              </div>
              <div
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "#F9FAFB",
                    "borderRadius": "0.5rem",
                    "cursor": "pointer",
                    "fontWeight": "500",
                    "padding": "12px",
                  }
                }
              >
                <button
                  style={
                    Object {
                      "alignItems": "center",
                      "background": "none",
                      "border": "none",
                      "display": "flex",
                      "gap": "0.5rem",
                      "justifyContent": "start",
                      "textDecoration": "none",
                    }
                  }
                >
                  <svg
                    height={21.42857142857143}
                    id="SuiSvg"
                    viewBox="-1 0 28 40"
                    width={15}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1.8611,33.0541a13.6477,13.6477,0,0,0,23.7778,0,13.89,13.89,0,0,0,0-13.8909L15.1824.8368a1.6444,1.6444,0,0,0-2.8648,0L1.8611,19.1632A13.89,13.89,0,0,0,1.8611,33.0541ZM10.8044,9.5555,13.0338,5.648a.8222.8222,0,0,1,1.4324,0L23.043,20.68a10.8426,10.8426,0,0,1,.8873,8.8828,9.4254,9.4254,0,0,0-.4388-1.4586c-1.1847-3.0254-3.8634-5.36-7.9633-6.9393-2.8187-1.0819-4.618-2.6731-5.3491-4.73C9.2375,13.7848,10.221,10.8942,10.8044,9.5555ZM7.0028,16.2184,4.457,20.68a10.8569,10.8569,0,0,0,0,10.8582,10.6776,10.6776,0,0,0,16.1566,2.935,7.5061,7.5061,0,0,0,.0667-5.2913c-.87-2.1858-2.9646-3.9308-6.2252-5.1876-3.6857-1.4147-6.08-3.6233-7.1157-6.5625A9.297,9.297,0,0,1,7.0028,16.2184Z"
                      style={
                        Object {
                          "fill": "#6EBCEE",
                          "fillRule": "evenodd",
                        }
                      }
                    />
                  </svg>
                  Sui Test Wallet
                </button>
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": "12px",
                  "padding": "24px",
                }
              }
            >
              <h3
                style={
                  Object {
                    "fontWeight": "500",
                    "margin": "0",
                  }
                }
              >
                Or sign up or log in with a link
              </h3>
              <form
                onSubmit={[Function]}
              >
                <input
                  onChange={[Function]}
                  placeholder="Email address"
                  style={
                    Object {
                      "border": "1px solid rgb(203 213 225)",
                      "borderRadius": "0.5rem",
                      "padding": "12px",
                      "width": "90%",
                    }
                  }
                  type="email"
                  value=""
                />
                <button
                  style={
                    Object {
                      "backgroundColor": "#761AC7",
                      "border": "1px solid rgb(203 213 225)",
                      "borderRadius": "0.5rem",
                      "color": "#FFFFFF",
                      "marginTop": "1rem",
                      "minWidth": "6rem",
                      "padding": "6px",
                      "textDecoration": "none",
                    }
                  }
                  type="submit"
                >
                  Send
                </button>
              </form>
              <div
                style={
                  Object {
                    "fontSize": "small",
                    "paddingLeft": "3px",
                    "paddingTop": "6px",
                  }
                }
              >
                Advanced: 
                <a
                  href="test/self-custodial"
                  rel="noopener noreferrer"
                  style={
                    Object {
                      "color": "#751ac7",
                      "fontWeight": 400,
                      "textDecoration": "underline",
                    }
                  }
                  target="_blank"
                >
                  Create A Self-Custodial Wallet
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
